@@ -443,7 +443,12 @@ dsEdit.rtStatus=Runtime status
 dsEdit.notEnabled=Data source is not enabled
 dsEdit.noStatus=No current status messages
 dsEdit.discardedPolls=Discarded polls: {0} of {1} ({2}%)
+dsEdit.latestPollTimes=Latest poll times
+dsEdit.noPollTimes=No poll times available
+dsEdit.pollStartTime=Poll start time
+dsEdit.pollDuration=Poll duration
 dsEdit.cronPattern=Cron pattern
+
 
 dsEdit.alreadyExists=Data Source Already Exists
 dsEdit.unableToSave=Unable to save data source
@@ -1805,8 +1810,10 @@ shutdown.state.preTerminate=Pre Terminate
 shutdown.state.shutdownTasksRunning=Running shutdown tasks
 shutdown.state.webServerTerminate=Terminating web server
 
+dateAndTime.millisecond=Millisecond
+dateAndTime.milliseconds=Milliseconds
 dateAndTime.second=Second
-dateAndTime.seconds=Second
+dateAndTime.seconds=Seconds
 dateAndTime.minute=Minute
 dateAndTime.minutes=Minutes
 dateAndTime.hour=Hour
